# llm-classification-finetuning

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: explore_train_csv.ipynb  train_colab.ipynb
scripts/: download_kaggle.py  run_preprocess.py  run_train.py
src/: preprocess.py
tests/: test_format.py
